@@ -1,4 +1,5 @@
 version 2.0-rc1 XX-Mar-2012
+. [NEW] Actions: Added Catmull Rom By/To actions
 . [NEW] CCConfiguration: logs in which thread the director is running (Mac only)
 . [FIX] LabelBMFont: can be "init" without further arguments
 
